Fixed prime number generation and adjusted git